--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hugolee003/alt-blog.git"
+    "url": "git+https://github.com/hugolee003/alt-blog"
   },
   "author": "Ugochukwu James Egeonu",
   "license": "ISC",
